--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "server": "json-server -p3001 --watch db.json",
     "preview": "vite preview",
     "test": "jest"
   },
@@ -15,6 +16,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.7.2",
     "deep-freeze": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.7.0",
+    "json-server": "^1.0.0-beta.0",
     "react-test-renderer": "^18.3.1",
     "vite": "^4.4.5"
   },
